practice2025/eks/k8s/go-health/gohealth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohealth-deployment
spec:
  selector:
    matchLabels:
      app: gohealth-pod
  template:
    metadata:
      labels:
        app: gohealth-pod
    spec:
      containers:
      - name: gohealth-container
        image: $IMAGE_NAME
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: gohealth-service
spec:
  selector:
    app: gohealth-pod
  ports:
  - port: 80
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohealth-ingress
  labels:
    name: gohealth-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: $LOAD_BALANCER_NAME
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: $HEALTH_CHECK_PATH # /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: ingress-alb-class
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gohealth-service
            port: 
              number: 80
